using Microsoft.AspNetCore.Identity;

namespace ShiftFlow.Domain.Entities;

public class WorkOrder
{
    public int Id{get;set;}
    public string WorkOrderNumber{get;set;}=string.Empty;
    public int AssetId{get;set;} public virtual Asset? Asset{get;set;}
    public string Priority{get;set;}="Medium";
    public string Stage{get;set;}="New";
    public int? VendorId{get;set;} public virtual Vendor? Vendor{get;set;}
    public string? Description{get;set;} public string? Notes{get;set;}
    public string CreatedByUserId{get;set;}=string.Empty; public virtual ApplicationUser? CreatedByUser{get;set;}
    public DateTime CreatedDate{get;set;}=DateTime.UtcNow;
    public DateTime? ClosedDate{get;set;}

    /// <summary>Set only when this work order originated from an employee's Report Action (Stage starts at "Draft"). Null for admin-created work orders.</summary>
    public int? ActionTypeId{get;set;} public virtual AssetActionType? ActionType{get;set;}
    public int? CauseId{get;set;} public virtual AssetActionCause? Cause{get;set;}

    /// <summary>Set while Stage=="Blocked" — cleared on Resend. Historical blocks remain visible via StageEvents, not here.</summary>
    public int? BlockReasonId{get;set;} public virtual WorkOrderBlockReason? BlockReason{get;set;}
    public string? BlockDetail{get;set;}

    /// <summary>Set by the vendor when they submit a fix (Stage -> "Fixed - Pending Confirmation"). Cleared/overwritten on a fresh fix submission after a Resend.</summary>
    public string? FixDescription{get;set;}
    public decimal? FixCost{get;set;}
    public DateTime? FixCompletionDate{get;set;}

    /// <summary>Set only on work orders auto-generated by a Preventive Maintenance contract's recurring schedule. Null for every manually-created work order.</summary>
    public int? SourceContractId{get;set;} public virtual Contract? SourceContract{get;set;}
    /// <summary>The due date this PM occurrence represents — distinct from CreatedDate, which is when the row was actually inserted (can lag behind if the generator was down when the date arrived).</summary>
    public DateTime? ScheduledDate{get;set;}

    public virtual ICollection<WorkOrderStageEvent> StageEvents{get;set;}=new List<WorkOrderStageEvent>();
    public virtual ICollection<WorkOrderPart> Parts{get;set;}=new List<WorkOrderPart>();
    public virtual ICollection<WorkOrderAttachment> Attachments{get;set;}=new List<WorkOrderAttachment>();

    public static readonly string[] Priorities = ["Low", "Medium", "High", "Critical"];
    /// <summary>The linear happy-path pipeline. "Blocked" is deliberately excluded — it's a detour off "Sent to Vendor", not a forward step (see AllDisplayStages and _WorkOrderStagePipeline.cshtml's special-casing). "Draft"/"Rejected" are also outside this array, entered/exited via Accept/Reject.</summary>
    public static readonly string[] Stages = ["New", "Sent to Vendor", "Fixed - Pending Confirmation", "Closed"];
    /// <summary>Every stage a work order can be in, for filter dropdowns.</summary>
    public static readonly string[] AllDisplayStages = ["Draft", "Rejected", "New", "Sent to Vendor", "Blocked", "Fixed - Pending Confirmation", "Closed"];
}

/// <summary>One row per stage transition — the auditable, relational replacement for an in-memory stage-timestamp log.</summary>
public class WorkOrderStageEvent
{
    public int Id{get;set;}
    public int WorkOrderId{get;set;} public virtual WorkOrder? WorkOrder{get;set;}
    public string Stage{get;set;}=string.Empty;
    public DateTime ChangedAt{get;set;}=DateTime.UtcNow;
    public string ChangedByUserId{get;set;}=string.Empty; public virtual ApplicationUser? ChangedByUser{get;set;}
}

/// <summary>A part used by the vendor to fix a work order — repeatable, entered as part of the vendor's Fix report.</summary>
public class WorkOrderPart
{
    public int Id{get;set;}
    public int WorkOrderId{get;set;} public virtual WorkOrder? WorkOrder{get;set;}
    public string Name{get;set;}=string.Empty;
    public int Quantity{get;set;}=1;
}

/// <summary>Admin-manageable reason list a vendor picks from when blocking a work order (e.g. "Waiting on Parts"). Same shape as AssetActionCause.</summary>
public class WorkOrderBlockReason
{
    public int Id{get;set;} public string Name{get;set;}=string.Empty; public string? NameAr{get;set;}
    public bool IsActive{get;set;}=true;
}

/// <summary>A file the vendor attached to their Fix report (e.g. a photo). Stored outside wwwroot — see ReportAttachmentStorage.</summary>
public class WorkOrderAttachment
{
    public int Id{get;set;}
    public int WorkOrderId{get;set;} public virtual WorkOrder? WorkOrder{get;set;}
    public string FileName{get;set;}=string.Empty;
    public string FilePath{get;set;}=string.Empty;
    public string? FileType{get;set;}
    public long FileSize{get;set;}
    public string UploadedByUserId{get;set;}=string.Empty; public virtual ApplicationUser? UploadedByUser{get;set;}
    public DateTime UploadedAt{get;set;}=DateTime.UtcNow;
}
